--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="./imc.js" defer=""></script>
+  <script type="text/javascript" src="./script.js" defer=""></script>
   <link rel="stylesheet" href="./style.css">
   <title>Calcule seu IMC</title>
 </head>
